# byron-dex

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .psc-ide-port  Dockerfile  README.md  cabal.project  default.nix  docker-compose.yml  four-utxo-full-without-liquidity-order-1.flat  four-utxo-full-without-liquidity-order-2.flat  four-utxo-full-without-liquidity-order-3.flat  liquidity-order-1.flat  liquidity-order-2.flat  liquidity-order-3.flat  liquidity-order-4.flat  output  release.nix  result  sell-order-1.flat  sell-order-2.flat  sell-order-3.flat  shell-hoogle.nix  shell.nix
dex/: CHANGELOG.md  Dockerfile  Wiksa-1.flat  dex.cabal  four-utxo-full-1.flat  four-utxo-full-2.flat  four-utxo-full-3.flat  four-utxo-full-4.flat  four-utxo-full-without-liquidity-order-1.flat  four-utxo-full-without-liquidity-order-2.flat  four-utxo-full-without-liquidity-order-3.flat
dex/examples/: Main.hs
dex/pab/: Main.hs  Trace.hs
dex/pab-simulator/: Main.hs
dex/profiling/: Main.hs
dex/src/Dex/: Manual.hs  OffChain.hs  OnChain.hs  Trace.hs  Types.hs  WalletHistory.hs
dex/src/Dex/LiquidityPool/: PoolParts.hs
dex/test/: Spec.hs
dex/test/Spec/: UseCases.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4.20210212/: dex-0.1.0.0-inplace-dex-common.conf  dex-0.1.0.0-inplace.conf  package.cache  uniswap-0.1.0.0-inplace-uniswap-common.conf  uniswap-0.1.0.0-inplace.conf
dist-newstyle/src/: Win32-net_-5b9448ed2f179086.cache  cardano-b_-c8db9876882556ed.cache  cardano-c_-6913fd4f4ef86015.cache  cardano-l_-48e3a74bf8b61f34.cache  cardano-n_-f77532c42500fe62.cache  cardano-p_-cae013aee062332a.cache  flat-3cb8c450312dfc1f.cache  goblins-67efee8d68d79164.cache  hedgehog-_-586c3da22a5ce29b.cache  iohk-moni_-1defcf7452717dc5.cache  ouroboros_-e51b1e265e7bb521.cache  plutus-3214de3b8d8ae7cc.cache  purescrip_-dbf3a2a8ca5c958c.cache  servant-p_-2a9020fb8c4044b3.cache
faucet/faucet-backend/: README.md  app.config  docker-compose.yml  faucet-backend.cabal  gen-tags.sh
faucet/faucet-backend/nix/: release.nix
faucet/faucet-backend/src/: Config.hs  Faucet.hs  Logger.hs
faucet/faucet-backend/src/Faucet/: API.hs  Data.hs  Internal.hs
infrastructure/: docker-compose.yaml
infrastructure/config/testnet/: chain-index-config.json  pab-config.yml  testnet-config.json
middleware/: config.dhall  liquidity-order-1.flat  liquidity-order-2.flat  liquidity-order-3.flat  liquidity-order-4.flat  middleware.cabal
middleware/app/: Main.hs
middleware/src/Middleware/: API.hs  App.hs  Config.hs  Dex.hs  DummyAPI.hs  PabClient.hs
middleware/src/Middleware/Capability/: CORS.hs  Config.hs  Error.hs  Logger.hs  ReqIdGen.hs  Retry.hs  Time.hs
middleware/src/Middleware/Dex/: Types.hs
middleware/src/Middleware/PabClient/: API.hs  Types.hs
middleware/test/: CoinJSONCodecSpec.hs
nix/: default.nix  ec2.nix  sources.json
nix/deployment/: ec2.nix
nix/devcontainer/: devcontainer.nix  dex-devcontainer.nix  uniswap-devcontainer.nix
nix/lib/: build.nix
nix/pkgs/: default.nix
nix/pkgs/haskell/: haskell.nix
simple-swap/: hie.yaml  simple-swap.cabal
simple-swap/app/: oracle-client.hs  oracle-pab.hs  swap-client.hs
simple-swap/src/SimpleSwap/: Core.hs  Funds.hs  PAB.hs  Swap.hs  Test.hs
uniswap/: .hpc  .stylish-haskell.yaml  cabal.project  uniswap-pab.tix  uniswap.cabal
uniswap-common/: CHANGELOG.md  cabal.project  uniswap-common.cabal
uniswap-common/src/Uniswap/Common/: WalletHistory.hs
uniswap-common/test/Spec/: WalletHistorySpec.hs
uniswap-json-api/: .env  .stylish-haskell.yaml  Dockerfile  README.md  default.nix  docker-compose.yml  hie.yaml  uniswap-json-api.cabal
uniswap-json-api/app/: Main.hs
uniswap-json-api/nix/: image.nix  nixpkgs.json  nixpkgs.nix  shell.nix
uniswap-json-api/src/: UniswapJsonApi.hs
uniswap-json-api/src/Uniswap/: API.hs  App.hs  PAB.hs  Types.hs
uniswap-json-api/src/Uniswap/Common/: AppError.hs  Logger.hs  NextId.hs  NextOpID.hs  ServantClient.hs  ServantServer.hs  Utils.hs
uniswap-json-api/src/Uniswap/LiquidityPool/: API.hs  Capabilities.hs  Types.hs
uniswap-json-api/src/Uniswap/PAB/: Types.hs
uniswap-json-api/src/UniswapJsonApi/: Client.hs  Logic.hs  Model.hs  Types.hs
uniswap-json-api/test/: UniswapJsonApiSpec.hs
uniswap-ui/: .gitignore  package-lock.json  package.json  packages.dhall  shell.nix  spago.dhall
uniswap-ui/dev/: index.html  main.css
uniswap-ui/src/: AppM.purs  Main.purs  Store.purs
uniswap-ui/src/Api/: Endpoint.purs  Request.purs  Utils.purs
uniswap-ui/src/App/: Button.purs
uniswap-ui/src/Capability/: Funds.purs  Logger.purs  Navigate.purs  Now.purs  Pool.purs  Swap.purs  Timer.purs
uniswap-ui/src/Component/: CoinInputPanel.purs  Dropdown.purs  Router.purs
uniswap-ui/src/Data/: Amount.purs  Coin.purs  Common.purs  Fee.purs  Fund.purs  LiquidityPool.purs  Log.purs  Preview.purs  Route.purs  SlippageTolerance.purs  Swap.purs  Wallet.purs
uniswap-ui/src/Form/: Field.purs  Validation.purs
uniswap-ui/src/Page/: AddLiquidityPool.purs  ConnectWallet.purs  Funds.purs  Home.purs  LiquidityPools.purs  Swap.purs
uniswap/app/: Main.hs
uniswap/common/Uniswap/Common/: WalletHistory.hs
uniswap/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
uniswap/dist-newstyle/packagedb/ghc-8.10.4.20210212/: package.cache  uniswap-0.1.0.0-inplace.conf
uniswap/dist-newstyle/src/: cardano-b_-c8db9876882556ed.cache  cardano-c_-6913fd4f4ef86015.cache  cardano-l_-48e3a74bf8b61f34.cache  cardano-p_-cae013aee062332a.cache  goblins-67efee8d68d79164.cache  iohk-moni_-1defcf7452717dc5.cache  ouroboros_-e51b1e265e7bb521.cache  plutus-3214de3b8d8ae7cc.cache  purescrip_-dbf3a2a8ca5c958c.cache  servant-p_-2a9020fb8c4044b3.cache
uniswap/pab/: Main.hs
uniswap/src/Uniswap/: .Types.hs.swp  IndirectSwaps.hs  OffChain.hs  OnChain.hs  Pool.hs  Trace.hs  Types.hs
uniswap/test/: Spec.hs
uniswap/test/Spec/: LiquidityPoolSpec.hs  Model.hs  WalletHistorySpec.hs
(+24 files in other folders)
