cabal-version:      2.4
name:               dex
version:            0.1.0.0
author:             jankun
maintainer:         michal.jankun@icsolutions.pl
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules: Dex.OnChain
                 , Dex.OffChain
                 , Dex.Types
                 , Dex.Manual
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , freer-simple
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , text
                     , bytestring
                     , ghc-prim
                     , lens
                     , lens-aeson
                     , freer-simple
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

