cabal-version:          2.4
name:                   middleware
version:                0.1.0.0
author:                 BinarApps
maintainer:             BinarApps

library
    hs-source-dirs:     src
    exposed-modules:    Middleware.Config
                      , Middleware.Capability.ReqIdGen
                      , Middleware.Capability.Logger
    build-depends:      base
                      , conferer
                      , conferer-dhall
                      , conferer-warp
                      , co-log
                      , retry
                      , freer-simple
                      , text
                      , uuid
                      , warp
    default-language:   Haskell2010
    ghc-options:        -Werror -Wall

    default-extensions: ScopedTypeVariables
                      , FlexibleContexts
                      , GADTs
                      , PolyKinds
                      , TemplateHaskell
                      , TypeApplications
                      , DataKinds
                      , LambdaCase
                      , RankNTypes
                      , TypeOperators
                      , TypeFamilies

executable middleware-manual
    main-is:            Main.hs
    build-depends:      base ^>=4.14.1.0
    hs-source-dirs:     app
    default-language:   Haskell2010
