Cabal-Version:         2.4
Name:                  simple-swap
Version:               0.1.0.0
Build-Type:            Simple

library
  hs-source-dirs:      src
  exposed-modules:     SimpleSwap.Core
                     , SimpleSwap.Funds
                     , SimpleSwap.PAB
                     , SimpleSwap.Swap
                     , SimpleSwap.Test
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable oracle-pab
  main-is: oracle-pab.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , simple-swap
                     , plutus-use-cases
                     , text

executable oracle-client
  main-is: oracle-client.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , bytestring
                     , regex-tdfa ^>= 1.3.1.0
                     , req ^>= 3.9.0
                     , text
                     , uuid

executable swap-client
  main-is: swap-client.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , plutus-ledger
                     , plutus-pab
                     , simple-swap
                     , req ^>= 3.9.0
                     , text
                     , uuid
