cabal-version:        2.4
name:                 uniswap-common
version:              0.1.0.0
author:               Jonatan Borkowski
maintainer:           jonatan.borkowski@pm.me
extra-source-files:   CHANGELOG.md

library
  hs-source-dirs:     src
  exposed-modules:    Uniswap.Common.WalletHistory
  build-depends:      aeson
                    , base ^>=4.14.1.0
                    , playground-common
                    , plutus-contract
                    , plutus-tx
                    , bytestring

  default-language:   Haskell2010
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

test-suite uniswap-common-tests
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:      base ^>=4.14.1.0
                    , hspec
                    , containers
                    , QuickCheck
                    , quickcheck-instances
                    , bytestring
                    , uniswap-common
  other-modules:      Spec.WalletHistorySpec
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.* 
  ghc-options:        -Wall -fno-warn-orphans -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
