cabal-version:        2.4
name:                 uniswap-json-api
version:              0.1.0.0
author:               Paweł Placzyński
maintainer:           placzynski.pawel@gmail.com

library
  hs-source-dirs:     src
  exposed-modules:    UniswapJsonApi
                    , UniswapJsonApi.Logic
                    , UniswapJsonApi.Client
                    , UniswapJsonApi.Model
                    , UniswapJsonApi.Types
  build-depends:      base
                    , bytestring
                    , aeson
                    , http-client
                    , http-client-tls
                    , mtl
                    , retry
                    , servant
                    , servant-client
                    , servant-server
                    , text
                    , warp
                    , uuid
  default-language:   Haskell2010

executable uniswap-json-api
  main-is:            Main.hs
  build-depends:      base
                    , mtl
                    , uniswap-json-api
  hs-source-dirs:     app
  default-language:   Haskell2010

test-suite uniswap-json-api-spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:      base
                    , hspec
                    , hspec-wai
                    , http-client
                    , http-client-tls
                    , servant
                    , servant-client
                    , servant-server
                    , warp
                    , uniswap-json-api
  other-modules:      UniswapJsonApiSpec
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
