cabal-version:        2.4
name:                 uniswap-json-api
version:              0.1.0.0
author:               Paweł Placzyński
maintainer:           placzynski.pawel@gmail.com

common shared-properties
  default-language:   Haskell2010
  ghc-options:        -Wall -optl-static -optl-pthread

library
  hs-source-dirs:     src
  exposed-modules:    Uniswap.PAB.Types
                    , Uniswap.PAB
                    , Uniswap.API
                    , Uniswap.App
                    , Uniswap.Types
                    , Uniswap.LiquidityPool.API
                    , Uniswap.LiquidityPool.Types
                    , Uniswap.Common.Utils
                    , Uniswap.Common.ServantClient
                    , Uniswap.Common.Logger
                    , Uniswap.Common.NextId
                    , Uniswap.Common.AppError
  build-depends:      base
                    , aeson
                    , bytestring
                    , either
                    , deriving-aeson
                    , co-log
                    , PyF
                    , http-client
                    , http-client-tls
                    , mtl
                    , retry
                    , servant
                    , servant-client
                    , servant-server
                    , text
                    , uuid
                    , warp
                    , freer-simple
                    , deepseq
                    , exceptions
                    , either
                    , wai
                    , wai-cors

  import:             shared-properties
  default-extensions: ScopedTypeVariables FlexibleContexts GADTs PolyKinds TemplateHaskell TypeApplications DataKinds LambdaCase RankNTypes TypeOperators TypeFamilies

executable uniswap-json-api
  main-is:            Main.hs
  build-depends:      base
                    , mtl
                    , uniswap-json-api
  hs-source-dirs:     app
  import:             shared-properties

test-suite uniswap-json-api-spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:      base
                    , hspec
                    , hspec-wai
                    , http-client
                    , http-client-tls
                    , servant
                    , servant-client
                    , servant-server
                    , warp
                    , uniswap-json-api
  other-modules:      UniswapJsonApiSpec
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  import:             shared-properties
