cabal-version:      2.4
name:               uniswap
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jankun
maintainer:         michal.jankun@icsolutions.pl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


library
  hs-source-dirs: src
  exposed-modules: Uniswap.OnChain
                 , Uniswap.OffChain
		 , Uniswap.Types
                 , Uniswap.Pool
                 , Uniswap.IndirectSwaps
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , text		 
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise




executable uniswap
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , uniswap
		    , plutus-contract
                    , plutus-ledger
		    , containers
                    , plutus-ledger-api
		    , data-default
                    , freer-extras
    hs-source-dirs:   app
    default-language: Haskell2010
