cabal-version:      2.4
name:               uniswap
version:            0.1.0.0
author:             jankun
maintainer:         michal.jankun@icsolutions.pl
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules: Uniswap.OnChain
                 , Uniswap.OffChain
                 , Uniswap.Types
                 , Uniswap.Pool
                 , Uniswap.IndirectSwaps
                 , Uniswap.Trace
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , freer-simple
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , text
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable uniswap-manual
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , uniswap
                    , plutus-contract
                    , plutus-ledger
                    , containers
                    , plutus-ledger-api
                    , data-default
                    , freer-extras
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite uniswap-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:       Spec.Model
                     , Spec.LiquidityPoolSpec 
  default-language: Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , lens
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , text
                     , uniswap
                     , plutus-ledger-api
                     , plutus-use-cases
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any

executable uniswap-pab
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    plutus-contract -any,
    plutus-pab -any,
    uniswap -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    filemanip -any,
    freer-extras -any,
    plutus-ledger -any,
    aeson -any,
    containers -any,
    text -any,
    plutus-use-cases -any,
    plutus-ledger-api -any
